--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
 name: Deploy to WordPress.org
-on:
-  push:
-    tags:
-    - "*"
+#on:
+#  push:
+#    tags:
+#    - "*"
+on: workflow_dispatch
+
 jobs:
   tag:
     name: New tag
