--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 name: Deploy to WordPress.org
-#on:
-#  push:
-#    tags:
-#    - "*"
-on: workflow_dispatch
-
+on:
+  push:
+    tags:
+    - "*"
 jobs:
   tag:
     name: New tag
